@@ -39,6 +39,7 @@ Usage: $0 [OPTIONS] ...
   -h, --help              print this help, then exit
   --prefix=PREFIX         install toolchain in PREFIX
 			  [$ac_default_prefix]
+  --host=HOST             host on which the toolchain will run [BUILD]
   -j, --parallelism PARALLELISM  Pass PARALLELISM as -jPARALLELISM
                           to make invocations.
   --components=LIST       specify which components to build
@@ -96,6 +97,11 @@ do
     ac_prev=destdir ;;
   -destdir=* | --destdir=* | --destdi=* | --destd=* | --dest=* | --des=* | --de=* | --d=*)
     destdir=$ac_optarg ;;
+
+  --host )
+    ac_prev=host ;;
+  --host=* )
+    host=$ac_optarg ;;
 
   -*) { echo "$as_me: error: unrecognized option: $ac_option
 Try \`$0 --help' for more information." >&2
@@ -184,6 +190,7 @@ build_binutils()
     cd binutils
     ${BASE_DIRECTORY}/binutils/configure \
 	--prefix=${PREFIX}      \
+	--host=${HOST}          \
 	--target=${TARGET}      \
 	--disable-nls
 
@@ -217,6 +224,8 @@ build_bootstrap_gcc()
 	--with-gnu-ld                  \
 	--with-gnu-as                  \
 	--target=${TARGET}             \
+	--build=${BUILD}               \
+	--host=${HOST}                 \
 	--prefix=${PREFIX}             \
 	--disable-threads              \
 	--disable-nls                  \
@@ -286,6 +295,8 @@ build_gcc()
 	--with-gnu-ld                  \
 	--with-gnu-as                  \
 	--target=${TARGET}             \
+	--build=${BUILD}               \
+	--host=${HOST}                 \
 	--prefix=${PREFIX}             \
 	--enable-threads=win32         \
 	--disable-nls                  \
@@ -448,6 +459,12 @@ done
 export TARGET="arm-cegcc"
 export BUILD=`sh ${BASE_DIRECTORY}/gcc/config.guess`
 export PATH=${PREFIX}/bin:${PATH}
+
+if [ "x${host}" != "x" ]; then
+	export HOST="${host}"
+else
+	export HOST=${BUILD}
+fi
 
 echo "Building cegcc:"
 echo "source: ${BASE_DIRECTORY}"
